# horizon_my_mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  fastmcp.json  prefect.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
mcp_server/: cli.py  server.py
prefect_flows/: flows.py
src/horizon_my_mcp/: __init__.py  cli.py  firecrawl_client.py  server.py  tavily_client.py
tests/: conftest.py  test_server.py  test_tavily.py
