[build-system]
requires = ["uv_build>=0.5.0", "hatchling"]
build-backend = "uv_build"

[project]
name = "horizon-my-mcp"
version = "0.1.0"
description = "Tavily search MCP server, deployed to Prefect Horizon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
horizon-mcp = "mcp_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]
deploy = [
    "prefect>=3.0.0",
]

[tool.uv]
package = true
default-groups = ["dev"]
required-version = ">=0.5.0"

[tool.uv.build-backend]
module-name = "mcp_server"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
