[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[project]
name = "horizon-my-mcp"
version = "0.2.0"
description = "Tavily + Firecrawl MCP server, deployable to Prefect Horizon and FastMCP Cloud."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "tavily-python>=0.5.0",
    "firecrawl-py>=4.30.0",
    "fastmcp>=3.0",
]

[project.scripts]
horizon-mcp = "horizon_my_mcp.server:main"

[dependency-groups]
deploy = [
    "prefect>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[tool.uv.build-backend]
module-name = "horizon_my_mcp"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
